fix quoted mark